[package]
name = "smol-graph"
version = "0.2.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/smol-graph/"
repository = "https://github.com/Hoidigan/smol-graph"
homepage = "https://github.com/Hoidigan/smol-graph"
description = "A simple and to-the-point Rust graph implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
